<resources>
    <string name="app_name">StockMonitor</string>
    <string name="details">Details</string>
    <string name="back">Back</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="overview">Overview</string>
    <string name="name">Name</string>
    <string name="price">Price:</string>
    <string name="amount">Amount</string>
    <string name="sector">Sector</string>
    <string name="stockname">Stock Name:</string>
    <string name="Tech">Technology</string>
    <string name="Medical">Medical</string>
    <string name="BasicRes">Basic Resources</string>
    <string-array name="Sectors">
        <item>Technology</item>
        <item>HealthCare</item>
        <item>BasicResources</item>
    </string-array>
</resources>
